# mpc-servers

./: .gitattributes  .gitignore  Cargo.toml  README.md  VERSIONING.md  install.ps1  install.sh  plan.md  spec.md  todos.md  uninstall.ps1  uninstall.sh
crates/cbm-server/: .gitignore  CLONE_ROADMAP.md  Cargo.toml  LICENSE  PARITY_MATRIX.md  README.md  RMCP_MIGRATION_TODO.md  RUST_REWRITE_TODO.md  TODO.md  install.ps1  install.sh
crates/cbm-server/.github/workflows/: ci.yml  release.yml
crates/cbm-server/docs/: IMPLEMENTATION_CHECKLIST.md  MODULE_MAP.md
crates/cbm-server/docs/reference/: architecture.md  functions.md  knowledge-graph.md  specifications.md
crates/cbm-server/hooks/: cbm-code-discovery-gate.ps1  cbm-code-discovery-gate.sh
crates/cbm-server/packaging/: DEFERRED_CHANNELS.md  releases.manifest.json
crates/cbm-server/packaging/homebrew/: codebase-memory-mcp.rb
crates/cbm-server/packaging/linux/: install.sh
crates/cbm-server/packaging/macos/: install.sh
crates/cbm-server/packaging/mcp/: README.md  claude-settings.json  codex-config.toml  dual-servers.example.json  generic-mcp.json  manifest.json  opencode.json
crates/cbm-server/packaging/scoop/: codebase-memory-mcp.json
crates/cbm-server/packaging/windows/: install.ps1
crates/cbm-server/packaging/winget/: codebase-memory-mcp.yaml
crates/cbm-server/scripts/: build-release.ps1  build-release.sh  install.ps1  install.sh  package-artifact.ps1  package-artifact.sh  smoke-quality-gates.ps1  smoke-quality-gates.sh  smoke-release-artifact.ps1
crates/cbm-server/src/: discover.rs  error.rs  file_fingerprint.rs  git.rs  lib.rs  main.rs  project.rs  symbol_id.rs  test_lock.rs  watcher.rs
crates/cbm-server/src/agent/: mod.rs
crates/cbm-server/src/cli/: mod.rs
crates/cbm-server/src/hooks/: mod.rs
crates/cbm-server/src/http/: api.rs  mod.rs  ui.html
crates/cbm-server/src/install/: mod.rs
crates/cbm-server/src/mcp/: mod.rs  params.rs  server.rs  tools.rs
crates/cbm-server/src/persistence/: mod.rs
crates/cbm-server/src/pipeline/: calls.rs  calls_ast.rs  communities.rs  cross_repo.rs  extract.rs  graph_buffer.rs  import_map.rs  imports.rs  inheritance.rs  lsp_cross.rs  mod.rs  registry.rs  routes.rs  structure.rs
crates/cbm-server/src/runtime/: budget.rs  mod.rs  profile.rs
crates/cbm-server/src/semantic/: corpus.rs  mod.rs  ri.rs  signals.rs
crates/cbm-server/src/store/: codec.rs  mod.rs  schema.rs  types.rs
crates/cbm-server/tests/: artifact_test.rs  calls_cross_file_import_test.rs  calls_negative_fixtures_test.rs  calls_pipeline_test.rs  calls_precision_test.rs  cli_process_test.rs  hooks_test.rs  incremental_index_test.rs  installer_contract_test.rs  integration_test.rs  mcp_process_test.rs  mcp_tool_schema_test.rs  rmcp_protocol_test.rs  store_bulk_write_test.rs  support.rs
crates/everything-server/: Cargo.toml  README.md
crates/everything-server/src/: lib.rs  main.rs
crates/fetch-server/: Cargo.toml
crates/fetch-server/src/: lib.rs  main.rs
crates/filesystem-server/: Cargo.toml  README.md
crates/filesystem-server/src/: allowed_directories.rs  lib.rs  main.rs  path_validation.rs
crates/git-server/: Cargo.toml  README.md
crates/git-server/src/: lib.rs  main.rs
crates/mcp-servers/: Cargo.toml
crates/mcp-servers/src/: main.rs
crates/memory-cli/: Cargo.toml
crates/memory-cli/src/: main.rs
crates/memory-core/: Cargo.toml
crates/memory-core/benches/: memory_bench.rs
crates/memory-core/src/: config.rs  error.rs  lib.rs  service.rs
crates/memory-core/src/consolidation/: decay.rs  dedup.rs  engine.rs  entity.rs  mod.rs  scheduler.rs
crates/memory-core/src/extraction/: engine.rs  llm_client.rs  mod.rs  prompt.rs
crates/memory-core/src/models/: memory.rs  mod.rs  query.rs
crates/memory-core/src/retrieval/: bm25.rs  engine.rs  hybrid.rs  mod.rs  semantic.rs
crates/memory-core/src/storage/: mod.rs  sqlite.rs  text_index.rs  vector.rs
crates/memory-core/tests/: consolidation_test.rs  dedup_test.rs  lifecycle_test.rs  query_validation_test.rs  vector_store_test.rs
crates/memory-server/: Cargo.toml  README.md
crates/memory-server/src/: main.rs  server.rs
crates/memory-server/tests/: protocol_test.rs
crates/nushell-server/: .gitignore  Cargo.toml  README.md  install.ps1  lessons.md
crates/nushell-server/docs/: spec.md
crates/nushell-server/scripts/: mcp_smoke.ps1
crates/nushell-server/src/: git.rs  lib.rs  main.rs  nu.rs  nu_tools.rs  server.rs  update.rs
crates/nushell-server/tests/: mcp_stdio.rs  nu_runner.rs
crates/rlm-server/: .gitignore  Cargo.toml  README.md  RMCP_MIGRATION_TODO.md  SKILL.md  TODO.md  install.ps1  install.sh  lessons.md  mcp-config.example.json
crates/rlm-server/.github/workflows/: ci.yml  nightly.yml  release.yml
crates/rlm-server/docs/: benchmarks.md  limitations.md  paper-mapping.md  repl-execution-model.md  rlm-loop.md  tools.md
crates/rlm-server/examples/: README.md  bad-prompt-stuffing.md  parallel-workers.md  worker-output.example.json
crates/rlm-server/packaging/linux/: install.sh
crates/rlm-server/packaging/macos/: install.sh
crates/rlm-server/packaging/mcp/: README.md  codex-config.toml  generic-mcp.json  manifest.json  opencode.json  tools-list.snapshot.json
crates/rlm-server/packaging/release/: LICENSE-MIT
crates/rlm-server/packaging/windows/: install.ps1
crates/rlm-server/scripts/: package-release.ps1  package-release.sh
crates/rlm-server/src/: cli.rs  discover.rs  error.rs  install.rs  lib.rs  main.rs  project.rs  test_lock.rs
crates/rlm-server/src/benchmark/: codeqa.rs  mod.rs  oolong.rs  sniah.rs  types.rs
crates/rlm-server/tests/: benchmark_codeqa.rs  benchmark_oolong.rs  benchmark_sniah.rs  cli_contract.rs  example_walkthrough.rs  installer_contract.rs  mcp_contract.rs  path_safety.rs  release_smoke.rs  repl_sandbox.rs  rlm_e2e.rs  rmcp_protocol.rs  session_storage.rs
crates/sequential-thinking-server/: Cargo.toml
crates/sequential-thinking-server/src/: lib.rs  main.rs
crates/time-server/: Cargo.toml
crates/time-server/src/: lib.rs  main.rs
docs/: fetch-security.md  (+1 more)
(+46 files in other folders)
