[workspace]
resolver = "2"
members = [
    "crates/server-inventory",
    "crates/mcp-servers",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Steven Ke"]
repository = "https://github.com/stevenke1981/mpc-servers"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
