[workspace]
resolver = "2"
members = [
    "crates/server-inventory",
    "crates/mcp-servers",
    "crates/time-server",
    "crates/sequential-thinking-server",
    "crates/filesystem-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Steven Ke"]
repository = "https://github.com/stevenke1981/mpc-servers"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "1", features = ["server", "transport-io"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
