[workspace]
resolver = "2"
members = [
    "crates/server-inventory",
    "crates/mcp-servers",
    "crates/time-server",
    "crates/sequential-thinking-server",
    "crates/filesystem-server",
    "crates/git-server",
    "crates/fetch-server",
    "crates/cbm-server",
    "crates/rlm-server",
    "crates/nushell-server",
    "crates/memory-core",
    "crates/memory-server",
    "crates/memory-cli",
    "crates/everything-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Steven Ke"]
repository = "https://github.com/stevenke1981/mpc-servers"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "1", features = ["server", "transport-io"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.8"
base64 = "0.22"
flate2 = "1"
similar = "2"
globset = "0.4"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "gzip", "brotli", "deflate", "json"] }
scraper = "0.24"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tantivy = { version = "0.22", default-features = true }
usearch = { version = "2", default-features = false }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
