[package]
name = "codebase-memory-mcp"
version = "0.2.3"
edition = "2021"
description = "codebase-memory-mcp — Rust knowledge graph MCP server for AI coding agents"
license = "MIT"
authors = ["CBM Contributors"]
keywords = ["mcp", "codebase", "knowledge-graph", "codebase-memory-mcp"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "codebase_memory_mcp"
path = "src/lib.rs"

[[bin]]
name = "cbm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
lz4_flex = "0.11"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
dirs = "6"
glob = "0.3"
ignore = "0.4"
once_cell = "1"
rayon = "1"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
streaming-iterator = "0.1"
tree-sitter = "0.25"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zstd = "0.13"
tree-sitter-php = "0.23"
tree-sitter-c-sharp = "0.23"

[dev-dependencies]
assert_cmd = "2"
rmcp = { version = "1.7.0", features = ["client", "transport-io"] }
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
