[package]
name = "fetch-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server providing bounded web fetching with SSRF protections (port of mcp-server-fetch)."

[[bin]]
name = "fetch-server"
path = "src/main.rs"

[dependencies]
rmcp.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
reqwest.workspace = true
scraper.workspace = true

