[package]
name = "filesystem-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server providing filesystem operations with directory access control (port of @modelcontextprotocol/server-filesystem)."

[[bin]]
name = "filesystem-server"
path = "src/main.rs"

[dependencies]
rmcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true
similar.workspace = true
globset.workspace = true
