[package]
name = "mcp-servers"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Workspace utility CLI for the Rust MCP server rewrite."

[[bin]]
name = "mcp-servers"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
server-inventory = { path = "../server-inventory" }
