[package]
name = "memory-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "memory-cli"
path = "src/main.rs"

[dependencies]
memory-core         = { path = "../memory-core" }
tokio               = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
anyhow              = { workspace = true }
clap                = { version = "4", features = ["derive"] }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
