[package]
name = "memory-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sqlx         = { workspace = true }
tantivy      = { workspace = true }
usearch      = { workspace = true }
reqwest      = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }

[dev-dependencies]
tokio-test   = "0.4"
tempfile     = "3"
criterion    = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "memory_bench"
harness = false
