[package]
name = "memory-mcp-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "memory-mcp-server"
path = "src/main.rs"

[dependencies]
memory-core         = { path = "../memory-core" }
rmcp                = { workspace = true }
schemars            = { workspace = true }
tokio               = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
anyhow              = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

[dev-dependencies]
tempfile            = "3"
