[package]
name = "nushell-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A stdio MCP server that wraps Nushell as structured tools."

[[bin]]
name = "nushell-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3"
