[package]
name = "rlm-mcp"
version = "0.1.6"
edition = "2021"
description = "rlm-mcp — standalone Rust RLM MCP server (external context sessions)"
license = "MIT"
authors = ["RLM Contributors"]
keywords = ["mcp", "rlm", "codebase", "rlm-mcp"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "rlm_mcp"
path = "src/lib.rs"

[[bin]]
name = "rlm-mcp"
path = "src/main.rs"

[dependencies]
dirs = "6"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
tempfile = "3"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
rmcp = { version = "1.7.0", features = ["client", "transport-io"] }
sha2 = "0.10"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
